frontend/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: frontend
  name: frontend-svc
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: "/"
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: frontend
  type: NodePort
